--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 .brand-logo {
   height: 100px;
   width: 100px;
-  background: url("/logo.jpg");
+  background: url("/logos.jpg");
   margin: auto;
   border-radius: 50%;
   box-sizing: border-box;
