--- a/styles.css
+++ b/styles.css
@@ -116,3 +116,25 @@ h1 {
   top: 0;
   left: 0;
 }
+button {
+  position: relative;
+  overflow: hidden;
+}
+
+button::before {
+  content: "";
+  position: absolute;
+  background: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 3s ease-out;
+}
+
+button:active::before {
+  transform: scaleX(1);
+  transform-origin: left;
+}
